fix: fix divider sometimes not being visible
Basically, I need for it to work in 3 cases:

1. parent is block

2. parent is flex

3. parent is flex and direction is column

And, I want to be able to change across cases with css only
(because responsiveness), so no props on the divider.
Which leads to me needing to do it with the border,
not with background color.

--- a/src/ui/Divider/Divider.module.css
+++ b/src/ui/Divider/Divider.module.css
@@ -1,8 +1,4 @@
 .divider {
-	flex-basis: 1px;
-	flex-shrink: 0;
-	background: var(--borderColor);
-	border: none;
-	height: 1px;
 	margin: 0;
+	border-color: var(--borderColor);
 }
